--- a/css/styles.css
+++ b/css/styles.css
@@ -64,9 +64,9 @@ body.lightbox-open {
 
 :root {
   /* Fuentes */
-  --font-headings: "BBH Bogle", sans-serif;
+  --font-headings: "BBH Bogle", "Roboto Condensed", sans-serif;
   --font-paragraphs: "Roboto Condensed", sans-serif;
-  --font-map: "BBH Bogle", sans-serif;
+  --font-map: "BBH Bogle", "Roboto Condensed", sans-serif;
 
   /* Colores de texto */
   --color-text-primary: #fff;
